fix: reduce spacing between icon and text in default placeholder
Changed icon margin-bottom from 30px to 20px in
PlaceholderContent for tighter spacing with the larger
70px robot icon.

--- a/webview/src/components/AgentPreview/PlaceholderContent.css
+++ b/webview/src/components/AgentPreview/PlaceholderContent.css
@@ -12,7 +12,7 @@
 }
 
 .placeholder-icon {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   opacity: 0.2;
   width: 70px;
   height: 70px;
